Import of BLUET/jaipo-0.0.7 from CPAN.
gitpan-cpan-distribution: Jaipo
gitpan-cpan-version:      0.0.7
gitpan-cpan-path:         BLUET/Jaipo/jaipo-0.0.7.tar.gz
gitpan-cpan-author:       BLUET
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,15 @@
-Jaipo
+Jaipo (宅噗)
+
+
+This project was starting for Jaiku.com, but now going to support as-much-as-we-can micro-blogging sites.
+
+"Jaiku" pronunced close to "宅窟" in Chinese, which means an area full of computer/internet users, and it really is one of the most popular sites recently. As jaiku is part of google and growing, there're still only few linux client.
+
+Jaipo is a lightweight command line Jaiku Client base on RickMeasham's Net::Jaiku perl module.
+
+Bcoz it's writen in perl, so it can run on any OS and any machine with perl. I got the first feedback that somebody use it on ARM embedded system at May 2008.
+
+Now you can read feeds, send message, and set location with Jaipo.
 
 
 
