Import of CORNELIUS/Jaipo-0.02 from CPAN.
gitpan-cpan-distribution: Jaipo
gitpan-cpan-version:      0.02
gitpan-cpan-path:         CORNELIUS/Jaipo-0.02.tar.gz
gitpan-cpan-author:       CORNELIUS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,15 +1,46 @@
 Jaipo (宅噗)
 
+This project started for Jaiku.com, but now is going to support
+as-much-as-we-can micro-blogging sites.
 
-This project was starting for Jaiku.com, but now going to support as-much-as-we-can micro-blogging sites.
+"Jaiku" pronunced close to "宅窟" in Chinese, which means an area full of
+computer/internet users, and it really is one of the most popular sites
+recently. As jaiku is part of google and growing, there're still only few linux
+client.
 
-"Jaiku" pronunced close to "宅窟" in Chinese, which means an area full of computer/internet users, and it really is one of the most popular sites recently. As jaiku is part of google and growing, there're still only few linux client.
-
-Jaipo is a lightweight command line Jaiku Client base on RickMeasham's Net::Jaiku perl module.
-
-Bcoz it's writen in perl, so it can run on any OS and any machine with perl. I got the first feedback that somebody use it on ARM embedded system at May 2008.
+it's writen in perl, so it can run on any platform that you can get perl on it.
+we got the first feedback that somebody use it on ARM embedded system at May 2008.
 
 Now you can read feeds, send message, and set location with Jaipo.
+
+HISTORY 
+
+This project was started by BlueT, which simply used Net::Jaiku to 
+post,review Jaiku message by script.
+
+c9s loves using twitter/plurk. so he ask bluet to develop jaipo as a module
+together and let jaipo works for other services like Jaiku, Plurk.. etc.  so we
+rewrite it into a module. and let the jaipo console interface looks like cpan
+interface.  
+
+Jaipo now provides console interface, but more sophisticate
+gui with clutter or gtk in the future.
+
+GETTING STARTED WITH Jaipo Console
+
+	jaipo console
+
+    jaipo> use              # list service triggers
+    twitter_c9s => Twitter
+    twitter_other => Twitter
+
+	jaipo> use Twitter
+
+	jaipo> use twitter   # this works too
+
+    jaipo> use twitter twitter_c9s  # use service and specify the trigger name
+
+    jaipo> :twitter_c9s :r     # read message
 
 
 
@@ -30,6 +61,12 @@ perldoc command.
     perldoc Jaipo
 
 You can also look for information at:
+
+	Website
+		http://jaipo.org/
+
+	Blog
+		http://jaipo-pm.blogspot.com/
 
     RT, CPAN's request tracker
         http://rt.cpan.org/NoAuth/Bugs.html?Dist=Jaipo
