Import of CORNELIUS/Jaipo-0.20 from CPAN.
gitpan-cpan-distribution: Jaipo
gitpan-cpan-version:      0.20
gitpan-cpan-path:         CORNELIUS/Jaipo-0.20.tar.gz
gitpan-cpan-author:       CORNELIUS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -30,6 +30,10 @@ GETTING STARTED WITH Jaipo Console
 
 	jaipo console
 
+or
+
+    perl -Ilib bin/jaipo console
+
     jaipo> use              # list service triggers
     twitter_c9s => Twitter
     twitter_other => Twitter
@@ -52,6 +56,19 @@ To install this module, run the following commands:
 	make
 	make test
 	make install
+
+
+DEVELOPMENT
+
+our main git repository is located at github.com.
+http://www.github.com/bluet/jaipo
+
+Start a New Branch on your Remote Git Repository
+http://www.zorched.net/2008/04/14/start-a-new-branch-on-your-remote-git-repository/
+
+Git Cheat
+http://cheat.errtheblog.com/s/git
+
 
 SUPPORT AND DOCUMENTATION
 
